--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".activity_doctor_data"
+            android:exported="false" />
+        <activity
             android:name=".AdminHospitalData"
             android:exported="false" />
         <activity
