--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.firebaseui:firebase-ui-database:6.0.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
 
 
 }
